--- a/Initial.ipynb
+++ b/Initial.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhFAXdNVBnYiZ4KfSThAJh",
+      "authorship_tag": "ABX9TyMn9Cr0U5ndsiZyzaDSB6zd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +58,226 @@
       ],
       "source": [
         "print(torch.__version__)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if torch.cuda.is_available():\n",
+        "  print(\"cuda is available\")\n",
+        "else:\n",
+        "  print(\"cuda is not available\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_UIvvpPys3Wd",
+        "outputId": "0e3973d2-28a4-42c6-e75e-302648a4213b"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cuda is not available\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2aeLs2MKtGjl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Creating a tensor\n"
+      ],
+      "metadata": {
+        "id": "5j8EAfjhtLeU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=torch.empty(3,3)"
+      ],
+      "metadata": {
+        "id": "YRzUjfMgtN8a"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dzIsO2MmtcUd",
+        "outputId": "48caadab-02b6-4dda-8698-f0b47ce8ed1b"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Tensor"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.zeros(2,3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a6u88x54teqz",
+        "outputId": "151570ad-dd4f-49a6-ae55-7fc3868ba865"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0.],\n",
+              "        [0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(11)  #for generating random values which would be same for each time(reproducibility)\n",
+        "torch.rand(2,3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NAV0RKiDt3YI",
+        "outputId": "30aede87-c8a5-4b85-db8e-fd1453665b82"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.1490, 0.4866, 0.9857],\n",
+              "        [0.1684, 0.5839, 0.6936]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.eye(5) #Identity matrix"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "voKXRP9IuQr2",
+        "outputId": "c112f05b-0e88-4e37-dbeb-1f58588f673e"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 0., 0., 0., 0.],\n",
+              "        [0., 1., 0., 0., 0.],\n",
+              "        [0., 0., 1., 0., 0.],\n",
+              "        [0., 0., 0., 1., 0.],\n",
+              "        [0., 0., 0., 0., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.full((3,3),4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Oz7IlODnuqf3",
+        "outputId": "c1b37726-7eba-40fe-e8c0-e394cd97e1f2"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4, 4, 4],\n",
+              "        [4, 4, 4],\n",
+              "        [4, 4, 4]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.tensor([1.0,2.2,3.3],dtype=torch.int32)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0_BH2CJexCp2",
+        "outputId": "e889e3b1-c717-45d0-9c00-565a0f79a665"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 2, 3], dtype=torch.int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
       ]
     }
   ]
